# metarag-sdk

./: .gitignore  LICENSE  README.md  manifest.in  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yaml
core/: chunking.py  retriever.py
docs/: api.md  architecture.md  examples.md  index.md  installation.md  quickstart.md
docs/references/: contracts.md  data_types.md
evaluator/: evaluator.py  ragas_eval.py
examples/: chunker_demo.py  embeddings_demo.py  loader_demo.py  metarag_demo.py  pipeline_demo.py  retriever_demo.py  vector_db_demo.py
metarag/: __init__.py  defaults.py  metarag.py
metarag/Evaluator/: __init__.py  evaluator.py  metrics.py
metarag/core/: __init__.py  chunking.py  loader.py  retriever.py  vector_db.py
metarag/pipelines/: __init__.py  generator.py  pipeline.py
metarag/router/: __init__.py  learned_rule_router.py  router.py  router_interface.py  selector.py
pipelines/: generator.py  pipeline.py
tests/: test_chunker.py  test_defaults.py  test_embeddings.py  test_evaluator.py  test_generator.py  test_loader.py  test_metarag.py  test_pipelines.py  test_profilers.py  test_retriever.py  test_vectorDB.py
