[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "metarag"
version = "0.2.0"
description = "AutoML for RAG — Intelligent Pipeline Selection Engine"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ankit Kumar", email = "your-email@example.com"}
]
keywords = ["rag", "llm", "retrieval", "pipeline-selection", "automl"]

dependencies = [
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "chromadb>=0.5.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",
    "pypdf>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "python-docx>=1.1.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "nltk>=3.8.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
eval = ["ragas>=0.1.0"]
dev = ["pytest>=7.0", "black>=23.0", "mypy>=1.0"]

[project.urls]
Homepage = "https://github.com/AnkitKumarxcodes/MetaRAG---Intelligent-Pipeline-Selection-Engine"
Documentation = "https://github.com/AnkitKumarxcodes/MetaRAG---Intelligent-Pipeline-Selection-Engine/wiki"
Repository = "https://github.com/AnkitKumarxcodes/MetaRAG---Intelligent-Pipeline-Selection-Engine"

[tool.setuptools.packages.find]
where = ["."]
include = ["metarag*"]