[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "metarag"
version = "0.3.0"
description = "Framework for benchmarking, evaluating, and orchestrating Retrieval-Augmented Generation pipelines."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ankit Kumar", email = "ankitsingh17082003@gmail.com"}
]
keywords = [
    "rag",
    "llm",
    "retrieval",
    "evaluation",
    "benchmarking",
    "pipeline-selection",
    "router",
    "retriever"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies — required for MetaRAG's default in-memory path
# (InMemoryVectorDB + HybridRetriever, which needs BM25). No LangChain.
dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "rank-bm25>=0.2.2",
    "pandas>=2.0.0,<3.0.0",
]

# Everything else is optional — guarded by try/except in the code itself,
# with clear install instructions printed if missing. Users only pay for
# what they actually use.
[project.optional-dependencies]
# Document loading beyond .txt/.md/.json/.csv
pdf = ["pypdf>=4.0.0,<5.0.0"]
docx = ["python-docx>=1.1.0"]
html = ["beautifulsoup4>=4.12.0"]

# Chunking: nltk sentence tokenizer (falls back to regex if absent)
nltk = ["nltk>=3.8.0"]

# Alternative vector DB backends (InMemoryVectorDB is the zero-dep default)
chroma = ["chromadb>=0.5.0,<0.6.0"]
faiss = ["faiss-cpu>=1.8.0"]

# Reranker (cross-encoder) — passthrough no-op if absent
rerank = ["sentence-transformers>=3.0.0,<4.0.0"]

# Built-in Ollama generator convenience wrapper (users can bring their own
# generator instead and skip this entirely)
ollama = ["requests>=2.31.0"]

# Everything above, bundled — convenience for users who want full functionality
all = [
    "pypdf>=4.0.0,<5.0.0",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "nltk>=3.8.0",
    "chromadb>=0.5.0,<0.6.0",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=3.0.0,<4.0.0",
    "requests>=2.31.0",
]

dev = [
    "pytest>=7",
    "black>=23",
    "mypy>=1",
    "ruff>=0.5"
]


[project.urls]
Homepage = "https://github.com/AnkitKumarxcodes/MetaRAG---Intelligent-Pipeline-Selection-Engine"
Documentation = "https://github.com/AnkitKumarxcodes/MetaRAG---Intelligent-Pipeline-Selection-Engine/wiki"
Repository = "https://github.com/AnkitKumarxcodes/MetaRAG---Intelligent-Pipeline-Selection-Engine"

[tool.setuptools.packages.find]
where = ["."]
include = ["metarag*"]