[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "metarag-sdk"
dynamic = ["version"]
description = "Framework for benchmarking, evaluating, and orchestrating Retrieval-Augmented Generation pipelines."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Ankit Kumar", email = "ankitsingh17082003+metaragsdk@gmail.com"}
]
keywords = [
    "rag",
    "llm",
    "retrieval",
    "evaluation",
    "benchmarking",
    "pipeline-selection",
    "router",
    "retriever"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "rank-bm25>=0.2.2",
    "pandas>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
pdf = ["pypdf>=4.0.0,<5.0.0"]
docx = ["python-docx>=1.1.0"]
html = ["beautifulsoup4>=4.12.0"]
nltk = ["nltk>=3.8.0"]
chroma = ["chromadb>=0.5.0,<0.6.0"]
faiss = ["faiss-cpu>=1.8.0"]
rerank = ["sentence-transformers>=3.0.0,<4.0.0"]
ollama = ["requests>=2.31.0"]
all = [
    "pypdf>=4.0.0,<5.0.0",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "nltk>=3.8.0",
    "chromadb>=0.5.0,<0.6.0",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=3.0.0,<4.0.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/AnkitKumarxcodes/metarag-sdk"
Documentation = "https://github.com/AnkitKumarxcodes/metarag-sdk/wiki"
Repository = "https://github.com/AnkitKumarxcodes/metarag-sdk"

[tool.setuptools_scm]
fallback_version = "0.0.0"
# Reads version from the latest git tag (e.g. tag "v0.3.0" -> version "0.3.0").
# No .git present -> falls back to 0.0.0 automatically.

[tool.setuptools.packages.find]
where = ["."]
include = ["metarag*"]
exclude = [
    "tests*",
    "examples*",
    ".venv*",
    "venv*",
    "env*",
]